Archive2/c9/c7317bc0c836ac/output
main.cpp:26:5: error: static_assert failed "!"
    static_assert(is_one_of<std::vector, std::map, std::list, std::set>{}, "!");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
